[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xm-lh"
version = "2.1.0"
description = "Xm-LH 智能持仓管理系统 — ML驱动的股票买卖决策系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.0,<6.0.0",
    "PyQtWebEngine>=5.15.0,<6.0.0",
    "pandas>=1.3.0,<3.0.0",
    "numpy>=1.20.0",
    "requests>=2.25.0,<3.0.0",
    "lightgbm>=3.3.0,<5.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "joblib>=1.1.0",
    "schedule>=1.1.0,<2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
akshare = ["akshare>=1.12.0"]
optuna = ["optuna>=3.0.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
xm-lh = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "data*", "data_sources*", "strategies*", "ui*", "utils*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
